# marty-microservices-framework

./: .gitignore  .pre-commit-config.yaml  ALIGNMENT_FIXES_SUMMARY.md  API_DOCUMENTATION_CONTRACT_TESTING_COMPLETE.md  BACK_COMPAT_SHIMS_TRACKING.md  CERTIFICATE_MANAGEMENT_IMPLEMENTATION_STATUS.md  CHANGELOG.md  CLI_README.md  CODE_QUALITY_ENHANCEMENT.md  CODE_QUALITY_TODO.md  COMPLETION_STATUS.md  DECOMPOSITION_SUMMARY.md  DEPENDENCY_OPTIMIZATION_PLAN.md  DISTRIBUTION_PLAN.md  E2E_DEPENDENCIES_FIXED_SUMMARY.md  ENHANCED_FRAMEWORK_README.md  ENHANCED_OBSERVABILITY_README.md  EVENT_BUS_UTILITIES_SUMMARY.md  HYBRID_APPROACH_SUMMARY.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  IMPORT_UPDATES_SUMMARY.md  KIND_PLAYWRIGHT_UV_SCRIPTS_SUMMARY.md  LEGACY_REMOVAL_SUMMARY.md  MANIFEST.in  MARTY_MMF_PLUGIN_IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  MMF_DEMO_README.md  MONOLITHIC_DECOMPOSITION_SUMMARY.md  MYPY_INTEGRATION_SUMMARY.md  Makefile  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_1_SECURITY_SUMMARY.md  PLUGIN_STRATEGY.md  PRIORITY_1_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_PLAN_COMPATIBILITY_CLEANUP.md  SERVICE_MESH_IMPLEMENTATION.md  STANDALONE_PROJECT_SUMMARY.md  (+26 more)
dashboard/backend/: pyproject.toml
dashboard/backend/marty_dashboard/: cli.py  config.py  database.py  main.py
dashboard/backend/marty_dashboard/api/: __init__.py
dashboard/backend/marty_dashboard/middleware/: logging.py  metrics.py  security.py
dashboard/backend/marty_dashboard/services/: discovery.py  metrics.py
examples/demos/petstore_domain/: Dockerfile  README.md  TODO_SECURITY_UPDATES.md  contracts_config.py  demo_resilience.py  docker-compose.enhanced.yml  docs_config.py  main.py  main_standard_observability.py  ml_pet_advisor.py  petstore_extended_messaging_examples.py  pyproject.toml  requirements.txt  simple_main.py  standalone_resilience_demo.py  test_service.py
examples/demos/petstore_domain/config/: enhanced_config.yaml
examples/demos/petstore_domain/db/: init.sql
examples/demos/petstore_domain/dev/: README.md  demo.sh  demo_api_features.sh  demo_petstore_plugin.sh  deploy-kind.sh  deploy.sh  dev-config.yaml  enhanced_petstore_demo_runner.py  experience_polish_demo.py  k8s_demo_runner.py  kafka_demo.py  kafka_test_local.py  petstore_demo_runner.py  port-forward.sh  run_resilience_demo.sh  working_demo.sh
examples/demos/petstore_domain/docs/: API_INTEGRATION_README.md  EXTENDED_MESSAGING_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  K8S_DEPLOYMENT.md  OUTBOX_PATTERN_IMPLEMENTATION.md  PETSTORE_RESILIENCE_SUMMARY.md  RESILIENCE_INTEGRATION.md  SECURITY_GUIDE.md
examples/demos/petstore_domain/k8s/: deployment.yaml  kustomization.yaml  service.yaml
examples/demos/petstore_domain/monitoring/: prometheus.yml
examples/demos/petstore_domain/reports/: README.md  api-docs_demo_output_20251016_113128.json  api-docs_terminal_output_20251016_113128.txt  core_demo_output_20251016_112532.json  core_terminal_output_20251016_112532.txt  resilience_demo_output_20251016_113115.json  resilience_terminal_output_20251016_113115.txt  service-mesh_demo_output_20251016_113134.json  service-mesh_terminal_output_20251016_113134.txt
marty_chassis/: README.md  __init__.py  exceptions.py  integration_test.py  pyproject.toml  test_uv_adoption.py
marty_chassis/cli/: main.py
marty_chassis/clients/: __init__.py
marty_chassis/config/: __init__.py  exceptions.py
marty_chassis/examples/: grpc_service.py  user_service.py
marty_chassis/factories/: __init__.py  fastapi_factory.py  grpc_factory.py  hexagonal_factory.py  hybrid_factory.py
marty_chassis/health/: __init__.py
marty_chassis/logger/: __init__.py
marty_chassis/metrics/: __init__.py
marty_chassis/plugins/: README.md  __init__.py  core_services.py  decorators.py  discovery.py  exceptions.py  extension_points.py  factory.py  interfaces.py  isolation.py  manager.py  test_plugins.py
marty_chassis/plugins/certificate_management/: __init__.py  config.py  exceptions.py  interfaces.py  models.py  plugin.py
marty_chassis/plugins/examples/: __init__.py  authentication_plugin.py  circuit_breaker_plugin.py  logging_plugin.py  metrics_plugin.py  middleware_plugin.py  monitoring_plugin.py  pipeline_plugin.py  service_discovery_plugin.py  simulation_plugin.py
marty_chassis/resilience/: __init__.py
marty_chassis/security/: __init__.py
marty_chassis/service_mesh/: __init__.py
marty_chassis/templates/: __init__.py
marty_chassis/tests/: test_chassis.py
microservice_project_template/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
microservice_project_template/.github/workflows/: ci.yml  release.yml
microservice_project_template/docs/: ARCHITECTURE.md  OBSERVABILITY.md
microservice_project_template/examples/: analytics_demo.py
microservice_project_template/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  serviceaccount.yaml  servicemonitor.yaml
microservice_project_template/k8s/observability/: otel-collector.yaml
microservice_project_template/k8s/overlays/dev/: kustomization.yaml  namespace.yaml
microservice_project_template/k8s/overlays/marty-services/: migration-job.yaml  patch-deployment.yaml
microservice_project_template/k8s/overlays/prod/: kustomization.yaml  patch-deployment.yaml
microservice_project_template/k8s/overlays/service-mesh/: kustomization.yaml
microservice_project_template/scripts/: tag_release.sh  test.sh  test_e2e.sh  test_integration.sh  test_unit.sh
microservice_project_template/src/microservice_template/: __init__.py  server.py
microservice_project_template/src/microservice_template/observability/: health.py  (+3 more)
microservice_project_template/tests/: conftest.py
microservice_project_template/tests/e2e/: test_cli_startup.py
services/shared/api-gateway-service/: Dockerfile  README.md  config.py  main.py  pyproject.toml
templates/service-discovery/: Dockerfile  README.md  config.py  main.py  pyproject.toml
templates/service-discovery/k8s/: secret.yaml
templates/service-discovery/tests/: test_service_discovery.py
(+1330 files in other folders)
