[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marty-msf"
version = "1.0.0"
description = "Marty Microservices Framework - Enterprise-grade microservices platform"
authors = [
    {name = "Marty Framework Team", email = "team@marty-msf.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["microservices", "framework", "fastapi", "docker", "kubernetes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]

# Core dependencies
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "click>=8.1.0",
    "rich>=13.8.0",
    "jinja2>=3.1.0",
    "toml>=0.10.2",
    "pyyaml>=6.0.0",
    "cookiecutter>=2.5.0",
    "gitpython>=3.1.40",
    "aiokafka>=0.12.0",
    "kafka-python>=2.2.15",
    "prometheus-client>=0.23.1",
    "aiohttp>=3.13.0",
    "aiofiles>=24.1.0",
    "locust>=2.34.0",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "grpcio-reflection>=1.59.0",
    "bandit[toml]>=1.8.0",
    "defusedxml>=0.7.1",
    "psutil>=7.1.0",
    "pyjwt>=2.10.1",
    "cryptography>=46.0.2",
    "sqlalchemy>=2.0.44",
    "bcrypt>=5.0.0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "pydantic-settings>=2.11.0",
    "docker>=7.1.0",
    "passlib>=1.7.4",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "numpy>=2.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-json-report>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.3",
    "kubernetes>=28.1.0",
    "docker>=6.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "testcontainers>=3.7.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "python-json-logger>=2.0.0",
]

microservices = [
    "aioredis>=2.0.1",
    "asyncpg>=0.29.0",
    "celery>=5.3.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
]

cloud = [
    "kubernetes>=28.1.0",
    "boto3>=1.34.0",
    "azure-identity>=1.15.0",
    "google-cloud-core>=2.4.0",
]

all = [
    "marty-msf[dev,microservices,cloud]"
]

[project.urls]
Homepage = "https://github.com/marty-framework/marty-microservices-framework"
Documentation = "https://marty-msf.readthedocs.io"
Repository = "https://github.com/marty-framework/marty-microservices-framework"
Issues = "https://github.com/marty-framework/marty-microservices-framework/issues"

[project.scripts]
marty = "marty_cli:cli"
marty-msf = "marty_cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["marty_cli*"]

[tool.setuptools.package-data]
marty_cli = ["templates/**/*"]
"*" = ["templates/**/*"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "bandit>=1.8.6",
    "build>=1.3.0",
    "docker>=7.1.0",
    "kubernetes>=34.1.0",
    "playwright>=1.55.0",
    "pre-commit>=4.3.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.14.0",
    "twine>=6.2.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "templates/",
    "microservice_project_template/",
]

[tool.ruff.lint]
# Current issues temporarily ignored - see CODE_QUALITY_TODO.md for improvement plan
ignore = [
    # Original priority issues from systematic fixing
    "E501",  # line-too-long (133 occurrences)
    "B904",  # raise-without-from-inside-except (28 occurrences)
    "I001",  # unsorted-imports (18 occurrences)
    "F401",  # unused-import (15 occurrences)
    "F821",  # undefined-name (13 occurrences)
    "UP035", # deprecated-import (5 occurrences)
    "B017",  # assert-raises-exception (4 occurrences)
    "F811",  # redefined-while-unused (1 occurrence)

    # Additional issues discovered during expanded linting - temporarily ignored for pre-commit functionality
    "E402",  # module-import-not-at-top-of-file
    "F841",  # unused-variable
    "C901",  # complex-structure (functions/classes too complex)
    "B007",  # unused-loop-control-variable
    "E722",  # bare-except
    "B008",  # function-call-in-default-argument
    "UP038", # non-pep604-isinstance
    "C401",  # unnecessary-generator
    "B027",  # empty-method-without-abstract-decorator
    "B024",  # abstract-base-class-without-abstract-method
    "C416",  # unnecessary-comprehension
    "C420",  # unnecessary-dict-comprehension-for-iterable
]

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C",    # flake8-comprehensions
]

[tool.uv.sources]
rich = { git = "https://github.com/Textualize/rich.git" }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--asyncio-mode=auto",
    "--durations=10",
]
markers = [
    "unit: Unit tests - fast, isolated tests for individual components",
    "integration: Integration tests - test component interactions",
    "e2e: End-to-end tests - full workflow validation",
    "performance: Performance and load tests",
    "slow: Tests that take more than 5 seconds",
    "external: Tests that require external services",
    "database: Tests that require database access",
    "kafka: Tests that require Kafka/event bus",
    "redis: Tests that require Redis/caching",
    "docker: Tests that require Docker containers",
    "chaos: Chaos engineering tests",
    "security: Security and compliance tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
